--- a/StudentApp/templates/base.html
+++ b/StudentApp/templates/base.html
@@ -105,7 +105,7 @@
                 </a>
                 <div class="dropdown-menu dropdown-menu-right dropdown-menu-icon-list">
                     <a class="dropdown-item"><i class="dw dw-user1"></i> Profile</a>
-                    <a class="dropdown-item"><i class="dw dw-logout"></i> Logout</a>
+                    <a class="dropdown-item" href="{% url 'StudentLogout' %}"><i class="dw dw-logout"></i> Logout</a>
                 </div>
             </div>
         </div>
